[gd_scene load_steps=5 format=2]

[ext_resource path="res://ArrowLeft.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://ArrowRight.tscn" type="PackedScene" id=3]
[ext_resource path="res://Button.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0196078, 0.0862745, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer2" type="HSplitContainer" parent="."]
margin_right = 640.0
margin_bottom = 720.0
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer1" type="CenterContainer" parent="HSplitContainer2"]
margin_right = 320.0
margin_bottom = 720.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeft" parent="HSplitContainer2/CenterContainer1" instance=ExtResource( 1 )]
margin_left = 160.0
margin_top = 360.0
margin_right = 160.0
margin_bottom = 360.0

[node name="CenterContainer2" type="CenterContainer" parent="HSplitContainer2"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 720.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowRight" parent="HSplitContainer2/CenterContainer2" instance=ExtResource( 3 )]
margin_left = 160.0
margin_top = 360.0
margin_right = 160.0
margin_bottom = 360.0

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 720.0
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="HSplitContainer"]
margin_right = 320.0
margin_bottom = 720.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonA" parent="HSplitContainer/CenterContainer3" instance=ExtResource( 4 )]
margin_left = 160.0
margin_top = 360.0
margin_right = 160.0
margin_bottom = 360.0
button_name = "A"

[node name="CenterContainer4" type="CenterContainer" parent="HSplitContainer"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 720.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonB" parent="HSplitContainer/CenterContainer4" instance=ExtResource( 4 )]
margin_left = 160.0
margin_top = 360.0
margin_right = 160.0
margin_bottom = 360.0
button_name = "B"

[connection signal="gui_input" from="HSplitContainer2/CenterContainer1" to="." method="_on_container_gui_input" binds= [ 1 ]]
[connection signal="gui_input" from="HSplitContainer2/CenterContainer2" to="." method="_on_container_gui_input" binds= [ 2 ]]
[connection signal="gui_input" from="HSplitContainer/CenterContainer3" to="." method="_on_container_gui_input" binds= [ 3 ]]
[connection signal="gui_input" from="HSplitContainer/CenterContainer4" to="." method="_on_container_gui_input" binds= [ 4 ]]
