extends Node


# Declare member variables here. Examples:
# var a = 2
# var b = "text"


# Called when the node enters the scene tree for the first time.
func _ready():
	$HSplitContainer2/CenterContainer3/ArrowLeft.rotation_degrees = (180)

## Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	print($Arrow.scale)
#	$Arrow.scale += 0.25 * $Arrow.scale
#	pass


#func _on_Timer_timeout():
#	print($Arrow.scale)
#	$Arrow.scale += 0.25 * $Arrow.scale
#	pass # Replace with function body.
